syntax = "proto3";

package vuong.app.v1;
option java_package = "com.vuong.app.v1";
option java_multiple_files = true;
option java_outer_classname = "MemberProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "common.proto";
import "operator.proto";
import "discord/doman.proto";

message GrpcMemberProfile {
  string member_id = 1;
  GrpcMemberRole role = 2;
  string server_id = 3;
  string join_at = 4;
  string profile_id = 5;
  string name = 6;
  string avt_url = 7;
}

message GrpcGetMembersByServerIdRequest {
  string profile_id = 1;
  string server_id = 2;
  int32 page_number = 3;
  int32 page_size = 4;
}

message GrpcGetMembersByServerIdResponse {
  GrpcMeta meta = 1;
  repeated GrpcMemberProfile content = 2;
}

message GrpcGetMemberByServerIdRequest {
  string profile_id = 1;
  string server_id = 2;
}

message GrpcGetMemberByServerIdResponse {
  GrpcMemberProfile result = 1;
}

service MemberService {
  rpc getMembersByServerId(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc getMemberByServerId(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
}